--- a/index.html
+++ b/index.html
@@ -58,8 +58,6 @@
                             <div class="input-group mb-3 margin-right">
                                 <span class="input-group-text fs-5 fw-bold me-2" id="inputGroup-sizing-default">Save</span>
                                 <input type="text" class="form-control px-2" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-                                <!-- <i class="fas fa-percent my-3 mx-3"></i> -->
-                                <!-- <img src="https://img.icons8.com/material-rounded/24/000000/percentage.png" class="mx-auto img-fluid max-width-50% height-auto"/> -->
                                 <div class="mx-3 m-3">%</div>
                                 <div class="d-grid d-md-block mx-auto">
                                     <button class="btn btn-primary fw-bold fs-5 px-3 py-2" type="button">Save</button>
@@ -69,49 +67,15 @@
                             <div class="total mx-auto mt-3">
                                 <h5>Saving Amount: <span>00</span></h5>
                                 <h5>Remaining Balance: <span>00</span></h5>
-                            </div>
-                            <!-- 
-                            <div class="row g-3 align-items-center">
-                                <div class="col-auto mx-0">
-                                  <label for="inputText" class="col-form-label">Food</label>
-                                </div>
-                                <div class="col-auto mx-auto">
-                                  <input type="text" id="inpuText" class="form-control  input-group mb-3" value="cost">
-                                </div>
-                            </div>
-                            <div class="row g-3 align-items-center">
-                                <div class="col-auto mx-0">
-                                  <label for="inputText" class="col-form-label">Rent</label>
-                                </div>
-                                <div class="col-auto mx-auto">
-                                  <input type="text" id="inpuText" class="form-control  input-group mb-3" value="cost">
-                                </div>
-                            </div>
-                            <div class="row g-3 align-items-center">
-                                <div class="col-auto mx-0">
-                                  <label for="inputText" class="col-form-label">Cloth</label>
-                                </div>
-                                <div class="col-auto mx-auto">
-                                  <input type="text" id="inpuText" class="form-control" value="cost">
-                                </div>
-                            </div> -->     
+                            </div> 
                         </div>
                     </form>
               </div>
             </div>
           </div>
     </main>
-    <!-- 
-    <section class="container mt-5">
-        <div class="row">
-            <div class="grid" style="--bs-columns: 10; --bs-gap: 1rem;">
-                <div class="g-col-6">
-                    <img src="images/cal.jpg" class="img-fluid" alt="" srcset="">
-                </div>
-                <div class="g-col-4">.g-col-4</div>
-              </div>
-        </div>
-    </section> -->
+
+    <script src="/app.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
